--- a/update_data.yml
+++ b/update_data.yml
@@ -1,42 +1,53 @@
-name: Atualizar Dados COVID-19
+name: Atualizar Dashboard COVID-19
 
 on:
   schedule:
-    - cron: '0 12 * * *'
-  workflow_dispatch:
+    - cron: '0 12 * * *'  # Executa diariamente ao meio-dia UTC
+  workflow_dispatch:       # Permite execução manual
 
 permissions:
-  contents: write
+  contents: write         # Permissão necessária para push
 
 jobs:
   update:
     runs-on: ubuntu-latest
- 
+    timeout-minutes: 15    # Tempo máximo de execução
+
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout do código
+      uses: actions/checkout@v3
       with:
-        fetch-depth: 0
-        
+        fetch-depth: 0     # Obtém todo o histórico de commits
+
     - name: Configurar Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-        
+
     - name: Instalar dependências
       run: |
         python -m pip install --upgrade pip
-        pip install pandas matplotlib seaborn requests
-        
-    - name: Executar script
+        pip install -r requirements.txt
+
+    - name: Executar script Python
       run: python covid_dashboard.py
-      
+
     - name: Configurar Git
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
-        
-    - name: Commitar e publicar
+
+    - name: Commitar alterações
       run: |
         git add .
-        git commit -m "📊 Atualização automática - $(date +'%d/%m/%Y')" || echo "Sem mudanças"
-        git push 
+        git commit -m "📊 Atualização automática - $(date +'%d/%m/%Y')" || echo "Sem mudanças para commitar"
+        
+    - name: Fazer push das alterações
+      run: git push
+
+    - name: Publicar no GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./docs
+        keep_files: true   # Mantém arquivos existentes
