--- a/update_data.yml
+++ b/update_data.yml
@@ -6,30 +6,30 @@ on:
   workflow_dispatch:       # Permite execução manual
 
 permissions:
-  contents: write         # Permissão necessária para push
+  contents: write         # Permissão para fazer push
 
 jobs:
-  update:
+  deploy:
     runs-on: ubuntu-latest
-    timeout-minutes: 15    # Tempo máximo de execução
+    timeout-minutes: 10   # Tempo máximo de execução
 
     steps:
-    - name: Checkout do código
+    - name: Checkout do repositório
       uses: actions/checkout@v3
       with:
-        fetch-depth: 0     # Obtém todo o histórico de commits
+        fetch-depth: 0    # Obtém todo o histórico
 
     - name: Configurar Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: "3.10"
 
     - name: Instalar dependências
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install pandas matplotlib seaborn requests
 
-    - name: Executar script Python
+    - name: Executar script
       run: python covid_dashboard.py
 
     - name: Configurar Git
@@ -40,8 +40,8 @@ jobs:
     - name: Commitar alterações
       run: |
         git add .
-        git commit -m "📊 Atualização automática - $(date +'%d/%m/%Y')" || echo "Sem mudanças para commitar"
-        
+        git commit -m "📊 Atualização automática - $(date +'%d/%m/%Y %H:%M')" || echo "Sem mudanças para commitar"
+
     - name: Fazer push das alterações
       run: git push
 
@@ -50,4 +50,4 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./docs
-        keep_files: true   # Mantém arquivos existentes
+        keep_files: false  # Limpa a pasta antes de publicar
